@@ -303,8 +303,8 @@ def export_agg_losses_ebr(ekey, dstore):
                   ('centroid_depth', F32)] if has_rup_data else []
     oq = dstore['oqparam']
     lti = oq.lti
-    dtlist = ([('event_id', U64), ('rup_id', U32), ('year', U32),
-               ('rlzi', U16)] + extra_list + oq.loss_dt_list())
+    dtlist = ([('event_id', U64), ('rup_id', U32), ('year', U32)]
+              + extra_list + oq.loss_dt_list())
     elt_dt = numpy.dtype(dtlist)
     elt = numpy.zeros(len(agg_losses), elt_dt)
     writer = writers.CsvWriter(fmt=writers.FIVEDIGITS)
@@ -330,14 +330,13 @@ def export_agg_losses_ebr(ekey, dstore):
         event = event_by_eid[row['eid']]
         rec['event_id'] = eid = event['eid']
         rec['year'] = year_of[eid]
-        rec['rlzi'] = row['rlzi']
         if rup_data:
             rec['rup_id'] = rup_id = event['eid'] // TWO32
             (rec['magnitude'], rec['centroid_lon'], rec['centroid_lat'],
              rec['centroid_depth']) = rup_data[rup_id]
         for lt, i in lti.items():
             rec[lt] = row['loss'][i]
-    elt.sort(order=['year', 'event_id', 'rlzi'])
+    elt.sort(order=['year', 'event_id'])
     dest = dstore.build_fname('agg_losses', 'all', 'csv')
     writer.save(elt, dest)
     return writer.getsaved()
