@@ -1,8 +1,8 @@
-event_id,rup_id,year,rlzi,magnitude,centroid_lon,centroid_lat,centroid_depth,structural
-193273528320,45,8,0,6.15000E+00,8.12985E+01,2.91098E+01,4.00000E+00,2.39994E+03
-180388626434,42,15,0,5.25000E+00,8.12985E+01,2.91098E+01,4.00000E+00,2.74907E+02
-210453397504,49,21,0,5.55000E+00,8.30823E+01,2.79006E+01,8.00000E+00,1.11997E+03
-180388626433,42,29,0,5.25000E+00,8.12985E+01,2.91098E+01,4.00000E+00,6.61698E+02
-180388626432,42,39,0,5.25000E+00,8.12985E+01,2.91098E+01,4.00000E+00,2.35503E+02
-219043332096,51,39,0,6.15000E+00,8.30782E+01,2.79042E+01,7.66979E+00,2.30390E+02
-180388626435,42,43,0,5.25000E+00,8.12985E+01,2.91098E+01,4.00000E+00,5.97396E+02
+event_id,rup_id,year,magnitude,centroid_lon,centroid_lat,centroid_depth,structural
+193273528320,45,8,6.15000E+00,8.12985E+01,2.91098E+01,4.00000E+00,2.39994E+03
+180388626434,42,15,5.25000E+00,8.12985E+01,2.91098E+01,4.00000E+00,2.74907E+02
+210453397504,49,21,5.55000E+00,8.30823E+01,2.79006E+01,8.00000E+00,1.11997E+03
+180388626433,42,29,5.25000E+00,8.12985E+01,2.91098E+01,4.00000E+00,6.61698E+02
+180388626432,42,39,5.25000E+00,8.12985E+01,2.91098E+01,4.00000E+00,2.35503E+02
+219043332096,51,39,6.15000E+00,8.30782E+01,2.79042E+01,7.66979E+00,2.30390E+02
+180388626435,42,43,5.25000E+00,8.12985E+01,2.91098E+01,4.00000E+00,5.97396E+02
